--- a/code/API_definitions/device-status.yaml
+++ b/code/API_definitions/device-status.yaml
@@ -2,60 +2,66 @@ openapi: 3.0.3
 info:
   title: Device Status
   description: |
-    This API provides the customer with the ability to query device roaming status and subscribe to event related to device roaming status.
+    This API provides the customer with the ability to query the roaming status of a device, and to subscribe to receive notifications when the device roaming status changes.
 
     # Introduction
 
-    API consumer is able to verify whether a certain user device is in roaming situation (or not). This capability is provided in 2 ways:
-      - via direct request with the roaming situation in the response.
-      - via a subscription  request - in this case the roaming situation is not in the response but event notification is sent back to the event subscriber when roaming situation change.
+    The API consumer is able to verify whether a certain user device is in a roaming situation (or not). This capability is provided in two ways:
+      - via a direct request, with the current roaming status given in the response.
+      - via a subscription request - in this case the roaming situation is not in the response but a notification is sent back to the subscriber when the device roaming status changes
 
-    The verification of the roaming situation depends on the network's ability. Additionally to the roaming status, when the device is in roaming situation, visited country information is send back in the response.
+    The verification of the roaming situation depends on the network's ability. In addition to the roaming status, visited country information is included in the response when the device is roaming.
 
-    Device status verification could be useful in scenario such as (not exhaustive):
-      - For regulatory reasons, where a customer may need to be within a certain jurisdiction, or out with others, in order for transactions to be authorized
-      - For security / fraud reasons, to establish that a customer is located where they claim to be
+    Device roaming status verification could be useful in scenarios such as (not exhaustive):
+      - For regulatory reasons, where a customer may need to be within a certain jurisdiction, or outwith others, in order for transactions to be authorized
+      - For security / fraud / fair play reasons, to establish that a customer is located where they claim to be
       - For service delivery reasons, to ensure that the customer has access to particular service, and will not incur roaming charges in accessing them
 
 
     # Relevant terms and definitions
 
-    * **Device**: A device refers to any physical entity that can connect to a network and participate in network communication.
-      At least one identifier for the device (user equipment) out of four options: IPv4 address, IPv6 address, Phone number, or Network Access Identifier assigned by the mobile network operator for the device.
+    * **Device**: A device (i.e. user equipment) refers to any physical entity that can connect to a mobile network and participate in network communication.
+      At least one identifier for the device must be provided from the following four options:
+      - IPv4 address
+      - IPv6 address
+      - Phone number (MSISDN)
+      - Network Access Identifier assigned by the mobile network operator for the device
 
-    * **Roaming** : Roaming status. `true`, if device is in roaming situation - `false` else.
+    * **Roaming** : Roaming status:
+      - `true` if device is connected to a network other than its home network
+      - `false` if connected to its home network
 
-    * **Country** : Country code and name - visited country information, provided if the device is in roaming situation.
+    * **Country** : Visited country code and name:
+      - Mobile country code (MCC), as defined by ITU-T E.212 (e.g. `262`).
+      - ISO country code, as defined by ISO 3166 ALPHA-2 (e.g. `DE`). A list may be provided if multiple countries share the same MCC.
 
 
     # API Functionality    
 
     The API exposes following capabilities:
 
-    ## Device roaming situation
+    ## Device roaming status
 
-    The endpoint `POST /roaming` allows to get roaming status and country information (if device in roaming situation) synchronously.
+    The endpoint `POST /roaming` allows the APi consumer to synchronously (i.e. immediately) get roaming status and country information (if the device is roaming).
 
     ## Device status event subscription
 
-    Theses endpoints allow to manage event subscription on roaming device status event. The CAMARA subscription model is detailed in the CAMARA API design guideline document.
+    This endpoint allows the API consumer to create and delete event subscriptions for specific roaming device status events. The CAMARA subscription model is detailed in the [CAMARA API Design Guidelines](https://github.com/camaraproject/Commonalities/blob/main/documentation/API-design-guidelines.md).
 
-    Following `eventType` are managed for this API: 
-      - ROAMING_STATUS - Event triggered when the device switch from roaming ON to roaming OFF and conversely
+    Following `eventType` options are defined for this API: 
+      - `ROAMING_STATUS` - This event is triggered when the device roaming status changes from roaming ON (`true`) to roaming OFF (`false`) or vice-versa
 
-      - ROAMING_ON - Event triggered when the device switch from roaming OFF to roaming ON
+      - `ROAMING_ON` - This event is only triggered when the device changes from roaming OFF to roaming ON
 
-      - ROAMING_OFF: Event triggered when the device switch from roaming ON to roaming OFF
+      - `ROAMING_OFF` - This event is only triggered when the device changes from roaming ON to roaming OFF
 
-      - ROAMING_CHANGE_COUNTRY: Event triggered when the device in roaming change country code
+      - `ROAMING_CHANGE_COUNTRY` - This event is triggered whenever the mobile country code (MCC) of the network to which the device is connected changes. Changing netorks within a given country does not trigger this event.
 
     ## Notification callback
 
-    This endpoint describes the event notification received on subscription listener side when the event occurred. As for subscription, detailed description of the event notification is provided in the CAMARA API design guideline document.
+    This endpoint describes the event notification that will be received by the subscription listener (API consumer) side when a subscribed event has occurred. A detailed description of the event notification mechanism is provided in the [CAMARA API Design Guidelines](https://github.com/camaraproject/Commonalities/blob/main/documentation/API-design-guidelines.md).
 
-    **WARNING**: This endpoint must be exposed on the listener side as `POST /notifications`
-      will be posted by the device status resource server to the url provided by notification 
-      listener.
+    **WARNING**: This endpoint must be implemented on the listener (API consumer) side, as a `POST /notifications` request will be made by the device status resource server to the url provided by notification listener.
 
     ## Further info and support
 
